Réorganisation du projet : déplacement et nettoyage de fichiers

--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,9 @@ dmypy.json
 
 # Fichiers spécifiques au projet
 *.db
+data/*.db
+data/*.db-*
+data/backups/
 backups/
-base.db
-base.db
-base.db
+!data/.gitkeep
+!data/backups/.gitkeep
