--- a/nginx_reunionwiki.conf
+++ b/nginx_reunionwiki.conf
@@ -31,7 +31,7 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Politique de sécurité du contenu (anti-XSS, anti injection)
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src * data:;" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src * data:;" always;
 
     # Bloque l'accès aux API sensibles du navigateur
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
