--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ server {
     ssl_certificate /etc/letsencrypt/live/reunionwiki.re/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/reunionwiki.re/privkey.pem;
 
+    access_log /var/log/nginx/access.log combined;
+    error_log  /var/log/nginx/error.log warn;
+
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
