access static report

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,12 @@ server {
     listen 80;
     server_name reunionwiki.re www.reunionwiki.re;
 
+    # Certbot (HTTP-01)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
+    # Redirection HTTP → HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -18,10 +20,19 @@ server {
     ssl_certificate /etc/letsencrypt/live/reunionwiki.re/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/reunionwiki.re/privkey.pem;
 
+    # Logs pour GoAccess
     access_log /var/log/nginx/access.log combined;
     error_log  /var/log/nginx/error.log warn;
 
+    # 🔹 FICHIERS STATIQUES (dont GoAccess)
+    location /static/ {
+        alias /var/www/static/;
+        try_files $uri =404;
+        expires 7d;
+        add_header Cache-Control "public";
+    }
 
+    # 🔹 Application Flask
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
