--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,6 +30,7 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
       - ./logs/nginx:/var/log/nginx
+      - ./static:/var/www/static:ro 
     depends_on:
       - web
 
